--- a/index.html
+++ b/index.html
@@ -5,44 +5,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <style>
-        /* Effect 1: Glow Around the Chalk Text Image */
+        /* Effect 1: Glow Around the Chalk Text Image with Rounded Corners */
         .hover-effect-glow {
             transition: box-shadow 0.3s ease-in-out, transform 0.3s ease-in-out;
+            border-radius: 10px; /* Rounded corners */
         }
         .hover-effect-glow:hover {
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.8); /* Glow around the image */
             transform: scale(1.1); /* Slightly enlarge the image */
         }
 
-        /* Effect 2: Dusty Shadow Effect */
+        /* Effect 2: Dusty Shadow Effect with Rounded Corners */
         .hover-effect-dust {
             transition: filter 0.3s ease-in-out, transform 0.3s ease-in-out;
+            border-radius: 10px; /* Rounded corners */
         }
         .hover-effect-dust:hover {
             filter: drop-shadow(5px 5px 5px #bbb); /* Adds a chalky shadow effect */
             transform: scale(1.1); /* Slightly enlarge the image */
         }
 
-        /* Effect 3: Shake Effect Like Written by Hand */
+        /* Effect 3: Shake Effect with Rounded Corners */
         .hover-effect-shake {
             transition: transform 0.2s ease-in-out;
+            border-radius: 10px; /* Rounded corners */
         }
         .hover-effect-shake:hover {
             transform: rotate(-2deg) translateX(-2px) translateY(-2px) scale(1.05); /* Shake effect */
         }
 
-        /* Effect 4: Smudge Effect */
+        /* Effect 4: Smudge Effect with Rounded Corners */
         .hover-effect-smudge {
             transition: filter 0.4s ease-in-out, transform 0.3s ease-in-out;
+            border-radius: 10px; /* Rounded corners */
         }
         .hover-effect-smudge:hover {
             filter: blur(2px); /* Smudge effect */
             transform: scale(1.05); /* Slight enlarge */
         }
 
-        /* Effect 5: Color Glow Change */
+        /* Effect 5: Color Glow Change with Rounded Corners */
         .hover-effect-color-glow {
             transition: box-shadow 0.3s ease-in-out;
+            border-radius: 10px; /* Rounded corners */
         }
         .hover-effect-color-glow:hover {
             box-shadow: 0 0 15px 5px rgba(255, 165, 0, 0.6); /* Adds an orange glow around the image */
@@ -144,59 +149,34 @@
             <img class="hover-effect-color-glow" style="position: absolute; top: 785px; left: 36px; width: 360px; height: 24px;" title="Small Equipment Repair Request" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A2A1E29F-658D-5653-52DD-D045EF12B504.png" alt="Small Equipment Repair Request">
         </a>
 
-
-        <!-- YOUTUBE LINK -->
-        <div class="video-carousel" style="position: absolute; top: 920px; left: 12px;">
-            <!-- Controls with custom arrows and centered text -->
-            <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
-                <!-- Custom left arrow image -->
-                <button id="prevBtn" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
-                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/777D4B81-C29D-C906-AC86-F16E4F03CE36.png" alt="Previous" style="width: 50px; height: 30px;">
-                </button>
-
-                <!-- Image in between the arrows -->
-                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/CAA4DB3C-86CD-ABDC-0B58-20634957127D.png" alt="Scroll" style="height: 30px;">
-
-                <!-- Custom right arrow image -->
-                <button id="nextBtn" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
-                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A79DFC11-1CED-7682-028F-B57064C4A9E0.png" alt="Next" style="width: 50px; height: 30px;">
-                </button>
-            </div>
-
-            <!-- Video iframe moved up by 15px -->
-            <div class="video-wrapper" style="position: relative;">
-                <iframe id="ytplayer" width="395" height="222.1875" src="" frameborder="0" allowfullscreen="allowfullscreen" style="transform: translateY(-30px);"></iframe>
-            </div>
-        </div>
-
-        <!-- PEER SUPPORT -->
+        <!-- PEER SUPPORT - Glow Effect -->
         <a href="https://s3.amazonaws.com/tsresources.targetsolutions.com/D4898E15-FA6F-356B-6EC4-FBCA63906713.png" target="_blank" rel="noopener">
-            <img class="hover-effect" style="position: absolute; top: 1210px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support">
+            <img class="hover-effect-glow" style="position: absolute; top: 1210px; left: 36px; width: 249px; height: 24px;" title="Peer Support" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/5F9B53FE-FE22-E33D-2363-3B316C1FCD1A.png" alt="Peer Support">
         </a>
 
-        <!-- CRITICAL INCIDENT EXPOSURE -->
+        <!-- CRITICAL INCIDENT EXPOSURE - Dusty Shadow Effect -->
         <a href="https://app.targetsolutions.com/tsapp/dashboard/pl_fb/index.cfm?fuseaction=c_pro_custom_activities.showUserCustomActivity&navIDs=1,7&credentialID=271617&courseID=1255585&oTID=578792" target="_blank" rel="noopener">
-            <img class="hover-effect" style="position: absolute; top: 1240px; left: 36px; width: 311px; height: 24px;" title="Critical Incident Exposure" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/45434530-0AEC-50EF-CD8B-7ECF7FA9E3D9.png" alt="Critical Incident Exposure">
+            <img class="hover-effect-dust" style="position: absolute; top: 1240px; left: 36px; width: 311px; height: 24px;" title="Critical Incident Exposure" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/45434530-0AEC-50EF-CD8B-7ECF7FA9E3D9.png" alt="Critical Incident Exposure">
         </a>
 
-        <!-- FCDICE -->
+        <!-- FCDICE - Shake Effect -->
         <a href="https://floridastatefirecollege.org/public/pb_index.asp" target="_blank" rel="noopener">
-            <img class="hover-effect" style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
+            <img class="hover-effect-shake" style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
         </a>
 
-        <!-- UNIFORM STORE -->
+        <!-- UNIFORM STORE - Smudge Effect -->
         <a href="https://designlabonline.net/pcf/" target="_blank" rel="noopener">
-            <img class="hover-effect" style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
+            <img class="hover-effect-smudge" style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
         </a>
 
-        <!-- MD Anderson -->
+        <!-- MD Anderson - Color Glow Change -->
         <a href="https://garnold91.wixsite.com/dash/cancer" target="_top">
-            <img class="hover-effect" style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.gif" alt="MD Anderson">
+            <img class="hover-effect-color-glow" style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.gif" alt="MD Anderson">
         </a>
 
-        <!-- SOP Standard Operating Guidelines -->
+        <!-- SOP Standard Operating Guidelines - Glow Effect -->
         <a href="https://centrality.ci.palm-coast.fl.us/employeedashboard/home/fire" target="_blank" rel="noopener">
-            <img class="hover-effect" style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+            <img class="hover-effect-glow" style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
         </a>
     </div>
 
