--- a/index.html
+++ b/index.html
@@ -5,8 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bulletin Board</title>
     <style>
-        /* Reset default styles for smooth animation */
-        .dock-container a img {
+        /* MacBook Dock scroll effect */
+        a img {
+            transition: transform 0.3s ease;
+        }
+
+        .dock-container a:hover img {
+            transform: scale(1.5);
+        }
+
+        .dock-container a:hover ~ a img {
+            transform: scale(1.25);
+        }
+
+        .dock-container a:hover ~ a ~ a img {
+            transform: scale(1.1);
+        }
+
+        a img {
             transition: transform 0.3s ease;
         }
 
@@ -131,4 +147,76 @@
 
             <!-- FCDICE -->
             <a href="https://floridastatefirecollege.org/public/pb_index.asp" target="_blank" rel="noopener">
-                <img style="position: absolute; top: 1360px; left: 36px; width:
+                <img style="position: absolute; top: 1360px; left: 36px; width: 82px; height: 24px;" title="FCDICE" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2C346044-E014-3AEE-3C2E-EB4602AD11AE.png" alt="FCDICE">
+            </a>
+
+            <!-- UNIFORM STORE -->
+            <a href="https://designlabonline.net/pcf/" target="_blank" rel="noopener">
+                <img style="position: absolute; top: 1390px; left: 36px; width: 180px; height: 24px;" title="Uniform Store" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/2F5F1750-3D29-D5FA-BE9F-5C43704DEC32.png" alt="Uniform Store">
+            </a>
+
+            <!-- MD Anderson -->
+            <a href="https://garnold91.wixsite.com/dash/cancer" target="_top">
+                <img style="position: absolute; top: 1420px; left: 36px; width: 309px; height: 24px;" title="MD Anderson" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/298FFD17-2DF4-22F2-B307-24A162E52DB2.gif" alt="MD Anderson">
+            </a>
+
+            <!-- SOP Standard Operating Guidelines -->
+            <a href="https://centrality.ci.palm-coast.fl.us/employeedashboard/home/fire" target="_blank" rel="noopener">
+                <img style="position: absolute; top: 1450px; left: 36px; width: 354px; height: 24px;" title="SOP Standard Operating Guidelines" src="https://s3.amazonaws.com/tsresources.targetsolutions.com/16370B4B-4E05-88D0-F6BD-193941311EBD.png" alt="SOP Standard Operating Guidelines">
+            </a>
+        </div>
+
+        <!-- YOUTUBE LINK -->
+        <div class="video-carousel" style="position: absolute; top: 920px; left: 12px;">
+            <!-- Controls with custom arrows and centered text -->
+            <div class="controls" style="position: relative; width: 395px; height: 30px; display: flex; justify-content: center; align-items: center; top: -35px;">
+                <!-- Custom left arrow image with shake effect -->
+                <button id="prevBtn" class="shake" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
+                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/777D4B81-C29D-C906-AC86-F16E4F03CE36.png" alt="Previous" style="width: 50px; height: 30px;">
+                </button>
+
+                <!-- Image in between the arrows -->
+                <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/CAA4DB3C-86CD-ABDC-0B58-20634957127D.png" alt="Scroll" style="height: 30px;">
+
+                <!-- Custom right arrow image with shake effect -->
+                <button id="nextBtn" class="shake" style="background: none; border: none; cursor: pointer; padding: 0 10px;">
+                    <img src="https://s3.amazonaws.com/tsresources.targetsolutions.com/A79DFC11-1CED-7682-028F-B57064C4A9E0.png" alt="Next" style="width: 50px; height: 30px;">
+                </button>
+            </div>
+
+            <!-- Video iframe moved up by 15px -->
+            <div class="video-wrapper" style="position: relative;">
+                <iframe id="ytplayer" width="395" height="222.1875" src="" frameborder="0" allowfullscreen="allowfullscreen" style="transform: translateY(-30px);"></iframe>
+            </div>
+        </div>
+    </div>
+
+    <!-- JavaScript placed before the closing body tag -->
+    <script>
+        const videos = [
+            'https://www.youtube.com/embed/jy9yQvJ6I_k?cc_load_policy=1',
+            // Replace 'video2' and 'video3' with actual video links
+            'https://www.youtube.com/embed/uzWJngpIbRY?cc_load_policy=1',
+            'https://www.youtube.com/embed/dC8dC8-ZAoU?cc_load_policy=1'
+        ];
+
+        // Generate a random index to start with
+        let currentIndex = Math.floor(Math.random() * videos.length);
+
+        // Set the iframe src to the random video when the page loads
+        document.getElementById('ytplayer').src = videos[currentIndex];
+
+        // Handle next video button click
+        document.getElementById('nextBtn').addEventListener('click', () => {
+            currentIndex = (currentIndex + 1) % videos.length;
+            document.getElementById('ytplayer').src = videos[currentIndex];
+        });
+
+        // Handle previous video button click
+        document.getElementById('prevBtn').addEventListener('click', () => {
+            currentIndex = (currentIndex - 1 + videos.length) % videos.length;
+            document.getElementById('ytplayer').src = videos[currentIndex];
+        });
+    </script>
+</body>
+</html>
