--- a/test.html
+++ b/test.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Florida 511 Camera Feed</title>
+  <title>Florida 511 Camera Feeds</title>
   <!-- Include hls.js from CDN for HLS support in non-Safari browsers -->
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
   <style>
@@ -12,18 +12,18 @@
       padding: 0;
       background: #000;
       display: flex;
-      justify-content: center;
-      align-items: center;
+      flex-direction: row; /* Arrange videos side by side */
       height: 100vh;
     }
     video {
-      max-width: 100%;
-      height: auto;
+      flex: 1;            /* Each video takes up equal space */
+      width: 50%;
+      object-fit: cover;  /* Adjust to your preference (cover, contain, etc.) */
     }
   </style>
 </head>
 <body>
-  <!-- Video element for the camera feed -->
+  <!-- First Camera Feed -->
   <video id="777-video_html5_api" class="vjs-tech" preload="auto" autoplay muted playsinline
          data-setup='{ "controls": true }'
          tabindex="-1"
@@ -34,36 +34,53 @@
     </p>
   </video>
 
+  <!-- Second Camera Feed -->
+  <video id="1080-video_html5_api" class="vjs-tech" preload="auto" autoplay muted playsinline
+         data-setup='{ "controls": true }'
+         tabindex="-1"
+         src="blob:https://fl511.com/6a4899a3-5ef9-4c03-8bea-8d5dca26cde4">
+    <source src="https://162-d2.divas.cloud/CHAN-9405/CHAN-9405_1.stream/playlist.m3u8?204.145.118.4&vdswztokenhash=GYDO8kkJH7dHphAT7H9kwHcKyZXaMknGFcCphebkuFw=" type="application/x-mpegURL">
+    <p class="vjs-no-js">
+      To view this video please enable JavaScript, and consider upgrading to a web browser that supports HTML5 video.
+    </p>
+  </video>
+
   <script>
-    // Get the video element and the HLS stream URL from the <source> element
-    const video = document.getElementById('777-video_html5_api');
-    const hlsSource = video.querySelector('source').src;
+    // Function to setup HLS for a given video element by its ID.
+    function setupHls(videoId) {
+      const video = document.getElementById(videoId);
+      const hlsSource = video.querySelector('source').src;
 
-    // Function to try to play the video with error handling
-    function tryPlayVideo() {
-      video.muted = true;  // Ensure the video is muted
-      video.play().catch(error => {
-        console.error('Playback error:', error);
-      });
+      // Function to attempt playback (ensuring muted is set).
+      function tryPlayVideo() {
+        video.muted = true;
+        video.play().catch(error => {
+          console.error(`Playback error for ${videoId}:`, error);
+        });
+      }
+
+      // Use hls.js if supported.
+      if (Hls.isSupported()) {
+        const hls = new Hls();
+        hls.loadSource(hlsSource);
+        hls.attachMedia(video);
+        hls.on(Hls.Events.MANIFEST_PARSED, function() {
+          tryPlayVideo();
+        });
+      } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
+        // Fallback for Safari, which supports HLS natively.
+        video.src = hlsSource;
+        video.addEventListener('loadedmetadata', function() {
+          tryPlayVideo();
+        });
+      } else {
+        console.error('This browser does not support HLS.');
+      }
     }
 
-    // Check if hls.js is supported (for most browsers except Safari)
-    if (Hls.isSupported()) {
-      const hls = new Hls();
-      hls.loadSource(hlsSource);
-      hls.attachMedia(video);
-      hls.on(Hls.Events.MANIFEST_PARSED, function() {
-        tryPlayVideo();
-      });
-    } else if (video.canPlayType('application/vnd.apple.mpegurl')) {
-      // For Safari, which supports HLS natively
-      video.src = hlsSource;
-      video.addEventListener('loadedmetadata', function() {
-        tryPlayVideo();
-      });
-    } else {
-      console.error('This browser does not support HLS.');
-    }
+    // Set up HLS for both video elements.
+    setupHls("777-video_html5_api");
+    setupHls("1080-video_html5_api");
   </script>
 </body>
 </html>
