--- a/test1.html
+++ b/test1.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-  </head>
-  <body>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Larkspur Fire Protection District</title>
+</head>
+<body>
+    <!-- Step 2: Include the JavaScript SDK -->
     <div id="fb-root"></div>
-    <script async defer crossorigin="anonymous"
-      src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0">
-    </script>
-
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v22.0&appId=1472642930378967"></script>
+    
+    <!-- Step 3: Place the Facebook Page Plugin -->
     <div class="fb-page"
-         data-href="https://www.facebook.com/facebook"
+         data-href="https://www.facebook.com/LARKSPURFIREDISTRICT/"
          data-tabs="timeline"
          data-width=""
          data-height=""
-         data-small-header="true"
+         data-small-header="false"
          data-adapt-container-width="true"
-         data-hide-cover="true"
+         data-hide-cover="false"
          data-show-facepile="false">
-      <blockquote cite="https://www.facebook.com/facebook" class="fb-xfbml-parse-ignore">
-        <a href="https://www.facebook.com/facebook">Facebook</a>
+      <blockquote cite="https://www.facebook.com/LARKSPURFIREDISTRICT/" class="fb-xfbml-parse-ignore">
+        <a href="https://www.facebook.com/LARKSPURFIREDISTRICT/">Larkspur Fire Protection District</a>
       </blockquote>
     </div>
-  </body>
+</body>
 </html>
